@@ -11,7 +11,16 @@ plugins {
 indra {
     javaVersions {
         target(libs.versions.java.get().toInt())
+        previewFeaturesEnabled(true)
     }
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType<Test> {
+    jvmArgs("--enable-preview")
 }
 
 repositories {
@@ -41,16 +50,21 @@ dependencies {
     testImplementation(kotlin("stdlib"))
     testImplementation(kotlin("reflect"))
 
-    testImplementation(libs.junit.api)
-    testRuntimeOnly(libs.junit.engine)
+    testImplementation(libs.bundles.test.lib)
+    testRuntimeOnly(libs.bundles.test.run)
 
     testImplementation(libs.testcontainers)
     testImplementation(libs.testcontainers.junit.jupiter)
     testImplementation(libs.testcontainers.rabbitmq)
     testImplementation(libs.testcontainers.minio)
+    compileOnly(libs.jspecify)
 }
 
 spotless {
+    java {
+        palantirJavaFormat()
+        formatAnnotations()
+    }
     kotlin {
         ktfmt().kotlinlangStyle().configure { it.setMaxWidth(120) }
         licenseHeader(toLongComment(rootProject.file("LICENSE_HEADER.md").readText()))
